# replace-yaml-string

./: .gitignore  LICENSE  Makefile  README.md  omlet.md  pyproject.toml  requirements.txt
src/: vaultmock.py
tests/: test.yaml  test_vaultmock.py
