[project]

name = "vaultmock"
version = "0.1.0"
description = "Tesla interview - replace yaml file strings"
readme = "README.md" 
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["Interview", "yaml", "python"]
authors = [
  {name = "Gaurav Swaroop", email = "swaroop.gaurav@gmail.com" }
]

maintainers = [
  {name = "Gaurav Swaroop", email = "swaroop.gaurav@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Bug Reports" = "https://github.com/gsdracarys/replace-yaml-string/issues"
"Source" = "https://github.com/gsdracarys/replace-yaml-string"
